# TaffTracker

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  launch.bat  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  tests.yml
calibration_data/: int8_calib.yaml
docs/: ARCHITECTURE.md  INSTALL.md  TUNING.md
firmware/esp32s3_gimbal/: CMakeLists.txt  load_secrets.py  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3  wifi_secrets.env.example
firmware/esp32s3_gimbal/src/: CMakeLists.txt  comm_task.c  control_task.c  main.c  servo_driver.c
models/: yolo26n-person-17pose.cache
models/Enhanceddog/: best.cache
scripts/: analyze_velocity_smoother.py  benchmark_pipeline.py  benchmark_preprocess.py  calibrate.py  ci.sh  export_engines.py  laser_capture.py  laser_debug.py
src/: __init__.py  cli.py  config.py  config_loader.py  main.py  process_supervisor.py
src/calibration/: __init__.py  camera_model.py  depth_estimator.py  laser_boresight.py  laser_calibrator.py
src/capture/: __init__.py  preflight.py  (+1 more)
tests/: conftest.py  test_adaptive_kalman.py  test_auto_comm.py  test_auto_controller.py  test_botsort.py  test_bytetrack.py  test_calibrate.py  test_camera_model.py  test_capture_helpers.py  test_capture_process.py  test_compute_angles.py  test_config.py  test_config_loader.py  test_control_stability.py  test_depth_estimator.py  test_detection_stability.py  test_display_buffer.py  test_encode_packet.py  test_fps_adaptive.py  test_gimbal_controller.py  test_gpu_preprocess.py  test_inference_bootstrap.py  test_inference_egomotion.py  test_inference_helpers.py  test_inference_telemetry.py  test_kalman.py  test_laser_boresight.py  test_laser_detector.py  test_launch_bat.py  test_manual_control.py  test_manual_keyboard.py  test_manual_loop.py  test_manual_thread.py  test_one_euro.py  test_optical_flow.py  test_output_process.py  test_performance_regression.py  test_pipeline_integration.py  test_pose_schema.py  test_postprocess.py  (+16 more)
(+52 files in other folders)
